crates/analyzer/tests/snapshots/errors__invalid_var_declaration_1.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: invalid declaration
  ┌─ compile_errors/invalid_var_declaration_1.fe:3:5
  │
3 │     (x,):u256[20]=[1,2,3,4,5,6,7,8,9,0,2,1,3,4,5,6,7,8,9,0]
  │     ^^^^
  │
  = Tuple declaration targets need to be declared with the tuple type but here the type is u256[20]


